test/files/neg/t6563.check
t6563.scala:5: error: not found: value e
    e
    ^
one error found
